# SignaTurk

./: .gitattributes  .gitignore  DEMO_WORDS.md  PROJECT_STATUS.md  README.md  backend.py  database.py  models.py  pyproject.toml  requirements-gpu.txt  requirements.txt  text_processing_routes.py
frontend/: app.js  avatar.glb  avatar3d.html  avatar_solver.js  avatarx.glb  index.html  motion_preprocess.js  style.css  text_processing_demo.html  text_processing_test.html
model/: demo_config.json  label_encoder_classes.npy  label_map.json  model.keras  norm_stats.json
model/signaturk/: backend_config.json
model/signaturk/data/labels/: class_display_names.json  label_map.json
model/signaturk/models/: hand_stream.keras  skeleton_v2.keras  skeleton_v4_seed.keras  skeleton_v6_seed.keras
model/signaturk/models/rtmw_hf/: rtmw-dw-x-l_simcc-cocktail14.onnx
reports/analysis/: 04_truthfulness_audit.md
signaturk_runtime/: __init__.py  config.py  feature_builder.py  features_core.py  model_loader.py  pose_quality.py  realtime_state.py  rtmpose_extractor.py
tests/: test_text_processing.py  test_text_processing_improvements.py
text_processing/: README.md  ROADMAP.md  __init__.py  buffer.py  demo.py  devserver.py  pipeline.py  tts.py
text_processing/eval/: __init__.py  __main__.py  dataset.jsonl
text_processing/grammar/: __init__.py  adapters.py  arbiter.py  corrector.py  linguistics.py  prompts.py  registry.py  rules.py  telemetry.py  validation.py
text_processing/web/: __init__.py  cache.py  jobs.py  router.py  schemas.py
tools/: download_hf_rtmw_models.ps1  download_hf_vitpose_models.ps1  package_gpu_bundle.ps1  run_backend_cpu_demo.ps1  run_backend_gpu.ps1
